--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 WEB_PORT=80
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=password
-DB_DB=rbxgen
+DB_HOST=bjbkyhxdfjwtrcadifcm-mysql.services.clever-cloud.com
+DB_USER=uzj27eapd71v8grf
+DB_PASS=wY2Xs8abJKZhBJkcGMTr
+DB_DB=bjbkyhxdfjwtrcadifcm
